--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@quenk/facets-parser",
+  "name": "@quenk/facets-dsl",
   "version": "0.2.1",
-  "description": "Parser for a small search filter DSL",
+  "description": "Small DSL for building search filters",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
