--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "clean": "rm -R lib/*",
-    "dist": "cd lib && npm publish",
-    "build:parser": "./node_modules/.bin/jison -o lib/Parser.js src/facets.y",
-    "build:src": "./node_modules/.bin/tsc -p src",
-    "build": "npm run -s build:parser && npm run -s build:src",
-    "test": "./node_modules/.bin/mocha --opts mocha.opts test/parse.ts",
-    "docs": "rm -R docs; cd src && ../node_modules/.bin/typedoc --ignoreCompilerErrors --mode modules --out docs . && mv docs .. && cd - && echo 'DO NOT DELETE!' > docs/.nojekyll"
+    "test": "./node_modules/.bin/mocha --opts mocha.opts test/parse.ts"
   },
   "author": "Lasana Murray <dev@quenk.com> (http://quenk.com)",
   "license": "Apache-2.0",
