fix: allow dots in field names

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.18",
     "jison": "^0.4.17",
+    "jison-gho": "^0.6.1-215",
     "mocha": "^3.3.0",
     "must": "^0.13.4",
     "ts-node": "^3.0.2",
