--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@quenk/facets-dsl",
-  "version": "0.5.2",
+  "version": "1.0.0",
   "description": "Small DSL for building search filters",
   "main": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "./node_modules/.bin/mocha --opts mocha.opts test/parse.ts"
