--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@quenk/facets-dsl",
+  "name": "@quenk/search-filters",
   "version": "1.2.0",
-  "description": "Small DSL for building search filters",
+  "description": "DSL for building search filters",
   "main": "lib/index.js",
   "files": [
     "lib"
@@ -13,9 +13,9 @@
   "author": "Quenk Technologies Limited <info@quenk.com> (https://quenk.com)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@quenk/test": "^2.1.3",
     "@types/mocha": "^5.2.7",
     "@types/node": "^13.1.2",
-    "jison": "^0.4.17",
     "jison-gho": "^0.6.1-216",
     "mocha": "^6.2.2",
     "must": "^0.13.4",
