--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --opts mocha.opts test/parse.ts"
+    "test": "./node_modules/.bin/mocha --opts mocha.opts $(find test -name *_test.ts)"
   },
   "author": "Quenk Technologies Limited <info@quenk.com> (https://quenk.com)",
   "license": "Apache-2.0",
